--- a/个人简历.md
+++ b/个人简历.md
@@ -1,1 +1,77 @@
-# Resume
+ 
+
+#### 基本信息
+
+姓   名：宁俊华                 教育背景：昆明理工大学
+
+出生年月：1993/02                 学   历：统招本科    
+
+现住地址：南宁青秀区               工作经验：6年  
+
+联系电话：18577793718               电子邮箱：2239127601@qq.com
+
+#### 求职意向
+
+前端开发工程师            
+
+#### 专业技术
+
+```
+能熟练使用HTML5+CSS3，并结合Sass/Less等预处理器进行设计稿还原
+
+熟练掌握JavaScript，TypeScript，并能运用ES6，ES7等高级语法进行高效开发
+
+多次使用Vue全家桶进行项目开发，并深入研究其源码；使用React Hooks+AntDesign熟练进行高效组件化开发
+
+会经常做一些提高代码效率的措施，如封装公用组件、公用函数、公用Hook等
+
+能够独立搭建符合规范化的脚手架，对前端工程化有一定程度的理解和实践
+
+在项目中，对于代码优化、打包优化、请求优化等优化措施有大量实践
+
+对算法的优化有一定程度的理解和运用
+
+在项目开发中熟练使用第三方组件库进行开发，并私下阅读其源码，了解其实现思想
+
+喜欢思考问题，并进行知识输出，多次参加知识分享会议
+```
+
+
+
+**工作经历**
+
+2018 年8月——2022年 10月  深圳中软国际科技有限公司       web前端
+
+2016 年8月——2018年 7月  深圳市华动力互联网技术有限公司    web前端    
+
+**主要****项目**
+
+***\*AI语音标注平台(2018-8-20 — 2020-12-30)\****
+
+**项目描述：**PC端对话聊天平台。对用户对话的文本进行人工标注，用于收集大数据，制定文本标注规范。
+
+**采用技术:**Vue+vuex+、 es6、css
+
+ 
+
+**责任描述：** UI界面设计并全面整改，完善聊天对话功能，标注功能，开发聊天记录和标注历史查看等，与后端进行接口联调。
+
+***\*ASR（自动语音识别）web端\****
+
+**项目描述：**[为用户提供:语音识别，语音合成，语义唤醒，在线命令词识别，开放语义，开放统计等，提供了稳定可靠的语音云服务。](http://www.baidu.com/baidu.php?url=0f00000uEDLSpLgiCB3pEUGOxuwFH4J9IsmDQ7hr3rs2ZmusOpUhO0J5JtpaVC0KqQZ89Pd9bcUVzLf3cdfHEl3N6unfLP_L2SBAWR66-95EhipJjHoGQC7aiVltrOq61604HLP0xqTDUjIgstFsw4b0DWrTlWHo3eCnsxxWoS5akN_uIcerw0laE4zQIwzZ3YkJuYFs9AlKC60RwD5vkdDkOebL.7R_NR2Ar5Od663rj6t8WgCswTbDpuECxahrjlZ59HTSA61fXlQEjRkxIuyGyAp7WWkzTIl6.U1Yk0ZDqmgPz0ZKGm1Ys0ZK1pyI85yN-uhn4rj9brjRsPh7-njfsPWcLryDYrH9WnAcdnymk0ZfqmgPz0A-V5HDdn1f0u1dEugK1nfKdpHdBmy-bIfKspyfqP0KWpyfqrHn0UgfqrjR4r7tknjDLg1csPWFxnW0dnNtknjD4g1nvnjD0pvbqn0KzIjYLrjR0mhbqnHR3g1csP7tznHIxPH010AdW5HnsnHfkPHD3P1wxnH63nWcLrj0vP-tkrjRzn1DsP16LndtznjRkg1Dsnj7xn0KkTA-b5H00TyPGujYs0ZFMIA7M5H00mycqn7ts0ANzu1Ys0ZKs5H00UMus5H08nj0snj0snj00Ugws5H00uAwETjYs0ZFJ5H00uANv5gKW0AuY5H00TA6qn0KET1Ys0AFL5HDs0A4Y5H00TLCq0A71gv-bm1dsTzdMXh410A-bm1dcHbc0IA7zuvNY5Hm1g1KxnHRs0ZwdT1YknH6dnWnsrHTvnHT4PWR3njTznsKzug7Y5HDvnHfLP1fYrjbzPjm0Tv-b5yR3PWTYP1Dknj0srjb3uHm0mLPV5HF7fWnznYP7PW-anYmkPRm0mynqnfKsUWYs0Z7VIjYs0Z7VT1Ys0ZGY5H00UyPxuMFEUHYsg1Kxn7tsg1Kxn0Kbmy4dmhNxTAk9Uh-bT1Ysg1Kxn7tsg1Kxn0Ksmgwxuhk9u1Ys0AwWpyfqnH0Ln1TYnH6zP0K-IA-b5iYk0A71TAPW5H00IgKGUhPW5H00Tydh5H00uhPdIjYs0A-1mvsqn0KlTAkdT1Ys0A7buhk9u1Yk0Akhm1Ys0AwWmvfq0Zwzmyw-5HTdnjcsnsKBuA-b5R7An1T1rHw7nbDdPWK7nHKKP1mYPH7KPRRkPDnYwW030AqW5HD0mMfqn0KEmgwL5H00ULfqn0KETMKY5H0WnanWnansc10Wna3snj0snj0WnanWnanVc108nj0snj0sc1D8nj0snj0s0Z91IZRqP1R4njfzPsKkgLmqna3dn-tsQW0sg108njKxna3sP-tsQWDsg108nW9xnH0sQW0sg100mMPxTZFEuA-b5H00pgPxmLK95H00mL0qn0KWThnqrjR3P6&xst=mWdKwWnLn1bYwHFKPHmswHDsfHTvPjRkfHN7nHwjPDmsr0715HDvP1fvPjnkrjTLP1fknjR3nWT3g1Ddn1wxn07L5y71T67k5y71T67d5HTdrH0YnWTKIjYkPWDYP1TYPj640ydk5H0an0cV0yPC5yuWgLKW0HnznWmLnjbsPj6&word=&ck=3120.29.7700.0.0.687.384.0&shh=www.baidu.com&sht=baidu&wd=&bc=110101&us=3.4808.3.0.2.850.0.0)
+
+**采用技术:**Vue、 es6、css
+
+**责任描述：**开发PC端语音识别，音频转换数据流与后台交互获取语音文本信息。
+
+***\*-商户SAAS支付系统\****
+
+**项目描述：**[为用户提供:语音识别，语音合成，语义唤醒，在线命令词识别，开放语义，开放统计等，提供了稳定可靠的语音云服务。](http://www.baidu.com/baidu.php?url=0f00000uEDLSpLgiCB3pEUGOxuwFH4J9IsmDQ7hr3rs2ZmusOpUhO0J5JtpaVC0KqQZ89Pd9bcUVzLf3cdfHEl3N6unfLP_L2SBAWR66-95EhipJjHoGQC7aiVltrOq61604HLP0xqTDUjIgstFsw4b0DWrTlWHo3eCnsxxWoS5akN_uIcerw0laE4zQIwzZ3YkJuYFs9AlKC60RwD5vkdDkOebL.7R_NR2Ar5Od663rj6t8WgCswTbDpuECxahrjlZ59HTSA61fXlQEjRkxIuyGyAp7WWkzTIl6.U1Yk0ZDqmgPz0ZKGm1Ys0ZK1pyI85yN-uhn4rj9brjRsPh7-njfsPWcLryDYrH9WnAcdnymk0ZfqmgPz0A-V5HDdn1f0u1dEugK1nfKdpHdBmy-bIfKspyfqP0KWpyfqrHn0UgfqrjR4r7tknjDLg1csPWFxnW0dnNtknjD4g1nvnjD0pvbqn0KzIjYLrjR0mhbqnHR3g1csP7tznHIxPH010AdW5HnsnHfkPHD3P1wxnH63nWcLrj0vP-tkrjRzn1DsP16LndtznjRkg1Dsnj7xn0KkTA-b5H00TyPGujYs0ZFMIA7M5H00mycqn7ts0ANzu1Ys0ZKs5H00UMus5H08nj0snj0snj00Ugws5H00uAwETjYs0ZFJ5H00uANv5gKW0AuY5H00TA6qn0KET1Ys0AFL5HDs0A4Y5H00TLCq0A71gv-bm1dsTzdMXh410A-bm1dcHbc0IA7zuvNY5Hm1g1KxnHRs0ZwdT1YknH6dnWnsrHTvnHT4PWR3njTznsKzug7Y5HDvnHfLP1fYrjbzPjm0Tv-b5yR3PWTYP1Dknj0srjb3uHm0mLPV5HF7fWnznYP7PW-anYmkPRm0mynqnfKsUWYs0Z7VIjYs0Z7VT1Ys0ZGY5H00UyPxuMFEUHYsg1Kxn7tsg1Kxn0Kbmy4dmhNxTAk9Uh-bT1Ysg1Kxn7tsg1Kxn0Ksmgwxuhk9u1Ys0AwWpyfqnH0Ln1TYnH6zP0K-IA-b5iYk0A71TAPW5H00IgKGUhPW5H00Tydh5H00uhPdIjYs0A-1mvsqn0KlTAkdT1Ys0A7buhk9u1Yk0Akhm1Ys0AwWmvfq0Zwzmyw-5HTdnjcsnsKBuA-b5R7An1T1rHw7nbDdPWK7nHKKP1mYPH7KPRRkPDnYwW030AqW5HD0mMfqn0KEmgwL5H00ULfqn0KETMKY5H0WnanWnansc10Wna3snj0snj0WnanWnanVc108nj0snj0sc1D8nj0snj0s0Z91IZRqP1R4njfzPsKkgLmqna3dn-tsQW0sg108njKxna3sP-tsQWDsg108nW9xnH0sQW0sg100mMPxTZFEuA-b5H00pgPxmLK95H00mL0qn0KWThnqrjR3P6&xst=mWdKwWnLn1bYwHFKPHmswHDsfHTvPjRkfHN7nHwjPDmsr0715HDvP1fvPjnkrjTLP1fknjR3nWT3g1Ddn1wxn07L5y71T67k5y71T67d5HTdrH0YnWTKIjYkPWDYP1TYPj640ydk5H0an0cV0yPC5yuWgLKW0HnznWmLnjbsPj6&word=&ck=3120.29.7700.0.0.687.384.0&shh=www.baidu.com&sht=baidu&wd=&bc=110101&us=3.4808.3.0.2.850.0.0)
+
+**采用技术:**Vue、 es6、css
+
+**责任描述：**开发PC端语音识别，音频转换数据流与后台交互获取语音文本信息。
+
+ 
+
+***\*-中台系统\****
