--- a/个人简历.md
+++ b/个人简历.md
@@ -5,7 +5,7 @@
 |                       |                             |
 | :-------------------- | :-------------------------- |
 | 姓   名：宁俊华       | 教育背景：昆明理工大学      |
-| 出生年月：1993/02     | 学历：统招本科              |
+| 出生年月：1993/02     | 学历：统招全日制本科              |
 | 现住地址：南宁青秀区  | 工作经验：6年               |
 | 联系电话：18577793718 | 电子邮箱：2239127601@qq.com |
 
